# load-test-example

./: .dockerignore  Dockerfile  README.md  example.env  locustfile.py  pyproject.toml  skaffold-base.yaml  skaffold.yaml
config/: settings.py  urls.py
config/environment/: db.py
core/app1/: apps.py  models.py  views.py
core/app1/migrations/: 0001_initial.py
deployment/: ns.yaml  services.yaml  volumes.yaml
deployment/db/: values.yaml
server/: entrypoint.sh  supervisor.conf
