[project]
name = "loadtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.5",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "gunicorn>=23.0.0",
    "uvicorn>=0.34.0",
    "locust>=2.32.6",
]
